# synapse

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  RELEASE_v2.md  docker-compose.yml  documentation.md  requirements.txt  roadmap.md  test_abac.py  test_cerebellum.py  test_confidence.py  test_heuristics.py  test_sdk.py  test_sleep_cycle.py  test_temporal_decay.py  test_webhooks.py
app/: __init__.py  database.py  dream_worker.py  main.py  mcp_server.py  models.py  prompts.py  schemas.py  services.py
app/connectors/: __init__.py  github.py  github_events.py  jira.py  slack.py  webhook_base.py
app/services/: __init__.py  confidence.py  core.py  grafting.py  heuristics.py  policy.py  sleep.py  studio.py
clients/python/: pyproject.toml
clients/python/synapse/: __init__.py  client.py  exceptions.py  models.py
docs/: api-reference.md
static/: app.js  index.html  styles.css
